# AH-Diff-Dashboard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: release.yml
.github/workflows/: ci-pages.yml
config/: default.yaml
data/: mapping_overrides.csv  pairs.csv  pairs_master.csv
docs/: README_full.md  case_study.md  cli.md  cli_usage.md  data_quality.md  demo.md  executability.md  index.html  methodology.md  one_pager.md  reproducibility.md  research_regression.md
docs/reports/: case_study_600036_SS_3968_HK_breaks.csv  case_study_600036_SS_3968_HK_cost_grid.csv  case_study_600036_SS_3968_HK_cost_report.html  case_study_600036_SS_3968_HK_rolling_coint.csv  case_study_601318_SS_2318_HK_breaks.csv  case_study_601318_SS_2318_HK_cost_grid.csv  case_study_601318_SS_2318_HK_cost_report.html  case_study_601318_SS_2318_HK_rolling_coint.csv  cost_sensitivity_demo.html
scripts/: build_case_study.py  build_offline_demo.py  build_pages_report.py  make_demo_assets.py  print_links.py  smoke_test.sh
src/ah_premium_lab/: __init__.py  (+3 more)
src/ah_premium_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  research_regression_utils.py  test_backtest_costs.py  test_backtest_executability.py  test_backtest_sensitivity_report.py  test_core.py  test_core_premium_metrics.py  test_data_integrity.py  test_data_pairs.py  test_data_provider_cache.py  test_hello_cli.py  test_pairs_strategy.py  test_report_metadata.py  test_research_regression.py  test_stats.py  test_stats_breaks.py  test_stats_rolling.py  test_universe.py
(+32 files in other folders)
